# cpp17

./: .gitignore  Cpp-Developer-mustKnow  LICENSE.md  README.md  StandardCppNote  readme
AST/: Note  Readme
AST/Project-1/: Readme  main.cpp  note
Aerospace/: Readme
Aerospace/Project-1/: CMakeLists.txt  Readme  main.cpp
AlgoTradingCpp/: README
AlgoTradingCpp/Project-1/: CMakeLists.txt  README  main.cpp
AlgoTradingCpp/Project-10/: README  main.cpp
AlgoTradingCpp/Project-11/: README  main.cpp
AlgoTradingCpp/Project-12/: CMakeLists.txt  Readme
AlgoTradingCpp/Project-12/src/: DisplayManager.cpp  DisplayManager.h  Instrument.cpp  Instrument.h  MarketDataGenerator.cpp  MarketDataGenerator.h  SimulationEngine.cpp  SimulationEngine.h  main.cpp
AlgoTradingCpp/Project-14/: CMakeLists.txt  Readme  main.cpp
AlgoTradingCpp/Project-15/: CMakeLists.txt  Readme  main.cpp
AlgoTradingCpp/Project-16/: main.cpp
AlgoTradingCpp/Project-2/: README  main.cpp
AlgoTradingCpp/Project-3/: README  main.cpp
AlgoTradingCpp/Project-4/: README  main.cpp
AlgoTradingCpp/Project-5/: README  main.cpp
AlgoTradingCpp/Project-6/: README  main.cpp
AlgoTradingCpp/Project-7/: README  main.cpp
AlgoTradingCpp/Project-8/: README  main.cpp
AlgoTradingCpp/Project-9/: README  main.cpp
AlgoTradingCpp/project-13/: README  main.cpp
Blockchain/: Readme
Blockchain/Project-1/: CMakeLists.txt  main.cpp  readme
Boost/: Note  README
Boost/Project-1/: CMakeLists.txt  README  main.cpp
Boost/Project-2/: CMakeLists.txt  README  main.cpp
CLI/: Readme  Readme2
CLI/Project-1/: CMakeLists.txt  Readme
CLI/Project-1/src/: main.cpp
CP/: Note-1  Readme
Car Abstraction/Car Abstraction/: Car.cpp
ClassesAndObjects/Project-1/: spreadsheetcell.hpp
Console-Games/BlockBreakGame/: CMakeLists.txt  Readme  main.cpp
Console-Games/DungeonBeeps/: CMakeLists.txt  Readme
Console-Games/DungeonBeeps/src/: AudioManager.cpp  GameManager.cpp  GameManager.h  main.cpp
Console-Games/Nintendo Tank v2/: AudioManager.cpp  AudioManager.hpp  CMakeLists.txt  Readme  main.cpp
Console-Games/RoguelikeConsoleGame/: CMakeLists.txt  Readme
Console-Games/RoguelikeConsoleGame/engine/: Enemy.cpp  Enemy.hpp  GameEngine.cpp  GameEngine.hpp  InputHandler.cpp  InputHandler.hpp  Map.cpp  Map.hpp  Player.cpp  Player.hpp  Renderer.cpp  Renderer.hpp
Console-Games/RoguelikeConsoleGame/example/: main.cpp
Copy Ctor/: Integer.cpp  Integer.h  main.cpp  test
Coroutine/: Readme
CppFeatures/MoveSemantics/: CMakeLists.txt  Integer.cpp  main.cpp
CppFeatures/Project-3/: CMakeLists.txt  main.cpp
CppFeatures/Project-4/: CMakeLists.txt  Integer.h  main.cpp  readme
CppFeatures/ReverseIterators/: CMakeLists.txt  main.cpp
CppToAssemblyCode/: Note-1  Note-2  Readme  Readme2
Cpp_NoEmbedded/: Note-3  Readme
Cpp_Notes/: Multi-Paradigm  Note-1  Note-10  Note-11  Note-12  Note-13  Note-14  Note-15  Note-16  Note-17  Note-18  Note-19  Note-2  Note-20  Note-21  Note-22  Note-23  Note-24  Note-25  Note-26  Note-27  Note-28  Note-3  Note-4  Note-5  Note-6  Note-7  Note-8  Note-9  references
DSA/: Note-1  README.md
DesignPatterns/: Readme  Readme2  Readme3  Readme_2
DiscoveringInheritanceTechniques/Project-11/: Book.cpp  CMakeLists.txt  Paperback.cpp  Romance.cpp  main.cpp
DiscoveringInheritanceTechniques/Project-6/: Base.hpp  CMakeLists.txt  Derived1.hpp
Doxygen/: CMakeLists.txt  main.cpp  readme
Doxygen/docs/: Doxyfile
Doxygen/docs/html/: dir_4fef79e7177ba769987a8da36c892c5f.html  globals.html  globals_func.html  main_8cpp.html
Drogon/: Readme.md
Drone/: Readme
Drone/Project-2/: CMakeLists.txt  Main.qml  Readme  main.cpp
Drone/Project-2/backend/: Drone.cpp  Drone.h
GTK/: README
GTK/Project-1/: CMakeLists.txt  README  main.cpp
Games/Console_game_engine_v2/: CMakeLists.txt
Games/Console_game_engine_v2/game/: Player.hpp
Games/Console_game_engine_v3/: CMakeLists.txt
Games/Console_game_engine_v3/game/: Game.cpp  Player.cpp  Player.hpp
Games/Console_game_engine_v3/ui/: UIManager.cpp
Games/SnakeGame/: CMakeLists.txt  Readme  main.cpp
HFT/: Note-1  Note-10  Note-4  Note-5  Note-6  Note-9  README
HIP/: README.md  Readme  VS_CODE_SETUP.md
HIP/Project-1/: CMakeLists.txt  HIP_EXTENSION_NOTE.md  QUICKSTART.md
HIP/Project-1/src/: gpu_check.hip
HTTP-TCP Simulator/: Readme.md
HTTP-TCP Simulator/Project-1/: CMakeLists.txt  Readme.md  main.cpp  main2.cpp
HandsOnDesignPatternswithCpp/: Readme
Inspirartion/: Sean_Baxter  mg-cpp-note-1  mg-cpp-note2
Interviews/: Readme
LUCPP/: Readme
MD File Note/: Note-1  Note-2  Readme.md
MLCPP/: README
MasteringClassesAndObjects/Project-14/: CMakeLists.txt  MyClass.hpp
MasteringClassesAndObjects/Project-7/: CMakeLists.txt
Microcontroller/: Note-1  README
Microcontroller/Project-20/: CMakeLists.txt  main.cpp  mcal_reg.h
Microcontroller/Project-23/: CMakeLists.txt  Readme  main.cpp
Microcontroller/Project-23/logic/: app_logic.hpp
Microcontroller/Project-23/stm32_hal_mock/: gpio.hpp  uart.hpp
MoreProjects/NcursesWrapper/: CMakeLists.txt  README  main.cpp
MusicPlayer/: Readme
NewInheritanceKeywords/: NewInheritanceKeywords.sln
OpenCV/: Readme
POCO/: Note  Note2  README
Pdfium/: README  main.cpp  main2.cpp  main3.cpp
PluginCpp/: Readme
Qt-Core/: Note-1  Note-2  Note-3  Readme  Readme2
Qt-QML/: Readme
Quant-lib/: Readme
RAII/: README
RefactoringCpp/: Readme
Reflection/: Readme
SFML/: Readme
SOLID/: CMakeLists.txt  README  dip.cpp  isp.cpp  lsp.cpp  ocp.cpp  srp.cpp
SimpleProcessViewerCpp/: CMakeLists.txt  README  main.cpp
Simualtion/: Readme
Template/: Readme
Templates/: test
ThreadMaster/: Readme
Threading/: main.cpp  main_1.cpp  main_12.cpp  main_15.cpp  main_5.cpp  test
TourOfCpp/: Readme
TradingDomainCpp/: Readme
UML/: README
WSN/: README
cppSnake/: main2.cpp
doxygen/: readme
fmt/: Readme
multiple-inheritance/: main.cpp  test
nginx/: Note-1  Note-2  Note-3  Readme
nlohmann-json/: Readme
threading/: main.cpp  main_10.cpp  main_2.cpp  main_7.cpp  main_8.cpp  test
(+3848 files in other folders)
